--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   <title>社内HTMLツール一覧</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
+    .item-title {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .item-icon {
+      width: 24px;
+      height: 24px;
+    }
+  </style>
+</head>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
                    "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
@@ -59,11 +71,14 @@
 
   <div class="list">
 
-    <div class="item">
-      <h2><a href="./qr-generator/">QRコード作成ツール</a></h2>
-      <p>URLや文字列からQRコードを生成します。</p>
-      <div class="meta">更新日：2026-01-14</div>
-    </div>
+  <div class="item">
+    <h2 class="item-title">
+      <img src="./assets/icons/favion.png" alt="" class="item-icon">
+      <a href="./qr-generator/">QRコード作成ツール</a>
+    </h2>
+    <p>URLや文字列からQRコードを生成します。</p>
+    <div class="meta">更新日：2026-01-14</div>
+  </div>
 
     <div class="item">
       <h2><a href="./folder-tool/">フォルダ自動生成ツール</a></h2>
