--- a/index.html
+++ b/index.html
@@ -34,11 +34,6 @@
       box-shadow: 0 1px 3px rgba(0,0,0,0.08);
     }
 
-    .item h2 {
-      margin: 0 0 6px;
-      font-size: 18px;
-    }
-
     .item-title {
       display: flex;
       align-items: center;
@@ -48,6 +43,16 @@
     .item-icon {
       width: 24px;
       height: 24px;
+    }
+
+    .item h2 {
+      margin: 0 0 6px;
+      font-size: 18px;
+    }
+
+    .item p {
+      margin: 0 0 8px;
+      color: #333;
     }
 
     .meta {
