--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
     </div>
 
     <div class="item">
+        <h2 class="item-title">
+        <img src="./assets/icons/beaver.png" alt="" class="item-icon">
       <h2><a href="./folder-tool/">フォルダ自動生成ツール</a></h2>
       <p>指定ルールに従ってフォルダ構成を自動生成します。</p>
       <div class="meta">更新日：2026-01-14</div>
