--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
 
   <div class="list">
 
+     <div class="item">
+      <h2 class="item-title">
+        <img src="./assets/icons/akabeko.png" alt="" class="item-icon">
+        <a href="./qr-generator/">発注一覧csvフィルターK(ファイルを開いてCSV UTF-8(コンマ区切り)にしてから存して読み込んでください</a></h2>
+      <p>抽出条件:仮注文書発行日時(AC列)から３週間(21日)経過しているかつ、注文書発行日時(AB列)が空</p>
+      <div class="meta">更新日：2026-01-14</div>
+    </div>
+
     <div class="item">
       <h2 class="item-title">
         <img src="./assets/icons/favion.png" alt="" class="item-icon">
