--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     }
 
     .item-icon {
-  display: block;   /* ← これが肝 */
+  display: block;
+  width: 24px;      /* ← 好きなサイズ */
+  height: 24px;
+  object-fit: contain;
     }
 
     .item h2 {
