--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
      <div class="item">
       <h2 class="item-title">
         <img src="./assets/icons/akabeko.png" alt="" class="item-icon">
-        <a href="./qr-generator/">発注一覧csvフィルターK(ファイルを開いてCSV UTF-8(コンマ区切り)にしてから存して読み込んでください</a></h2>
+        <a href="./qr-generator/">発注一覧csvフィルターK</a></h2>
+       <p>(ファイルを開いてCSV UTF-8(コンマ区切り)にしてから存して読み込んでください)</p>
       <p>抽出条件:仮注文書発行日時(AC列)から３週間(21日)経過しているかつ、注文書発行日時(AB列)が空</p>
       <div class="meta">更新日：2026-01-14</div>
     </div>
