--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   width: 50px;      /* ← 好きなサイズ */
   height: 50px;
   object-fit: contain;
+       border: 1px solid red; /* ← 確認用 */
     }
 
     .item h2 {
