--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
   </style>
 </head>
 <body>
-  <h1>社内HTMLツール一覧</h1>
-
+  <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
+    <img src="./assets/icons/tools-icon.png" alt="" style="width: 48px; height: 48px; object-fit: contain;">
+    <h1 style="margin: 0;">社内HTMLツール一覧</h1>
+  </div>
   <div class="note">
     このページは社内向けのHTMLツール一覧です。<br />
     URLは変更せず、各ツールはここからアクセスしてください。
