--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
   <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
-    <img src="./assets/icons/tools-icon.png" alt="" style="width: 48px; height: 48px; object-fit: contain;">
+    <img src="./assets/icons/bird.png" alt="" style="width: 48px; height: 48px; object-fit: contain;">
     <h1 style="margin: 0;">社内HTMLツール一覧</h1>
   </div>
   <div class="note">
