--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>社内HTMLツール一覧</title>
+  <link rel="icon" href="bird.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
