--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
   </style>
 </head>
 <body>
-  <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
-    <img src="./assets/icons/bird.png" alt="" style="width: 48px; height: 48px; object-fit: contain;">
-    <h1 style="margin: 0;">社内HTMLツール一覧</h1>
-  </div>
+<div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
+  <img src="./assets/icons/shiba1.png" alt="" style="width: 48px; height: 48px; object-fit: contain;">
+  <h1 style="margin: 0;">社内HTMLツール一覧</h1>
+  <img src="./assets/icons/shiba2.png" alt="" style="width: 48px; height: 48px; object-fit: contain;">
+</div>
   <div class="note">
     このページは社内向けのHTMLツール一覧です。<br />
     URLは変更せず、各ツールはここからアクセスしてください。
