--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>社内HTMLツール一覧</title>
-  <link rel="icon" href="./assets/icons/shiba1.png" type="image/png">
+  <link rel="icon" href="./assets/icons/shisa1.png" type="image/png">
 
   <style>
     body {
@@ -75,9 +75,9 @@
 </head>
 <body>
 <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
-  <img src="./assets/icons/shiba1.png" alt="" style="width: 48px; height: 48px; object-fit: contain;">
+  <img src="./assets/icons/shisa1.png" alt="" style="width: 48px; height: 48px; object-fit: contain;">
   <h1 style="margin: 0;">社内HTMLツール一覧</h1>
-  <img src="./assets/icons/shiba2.png" alt="" style="width: 48px; height: 48px; object-fit: contain;">
+  <img src="./assets/icons/shisa2.png" alt="" style="width: 48px; height: 48px; object-fit: contain;">
 </div>
   <div class="note">
     このページは社内向けのHTMLツール一覧です。<br />
