--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <div class="item">
       <h2 class="item-title">
-        <img src="./assets/icons/favion.png" alt="" class="item-icon">
+        <img src="./assets/icons/dogu.png" alt="" class="item-icon">
         <a href="./qr-generator/">QRコード作成ツール</a></h2>
       <p>URLや文字列からQRコードを生成します。</p>
       <div class="meta">更新日：2026-01-14</div>
@@ -105,7 +105,7 @@
 
     <div class="item">
         <h2 class="item-title">
-        <img src="./assets/icons/beaver.png" alt="" class="item-icon">
+        <img src="./assets/icons/moai.png" alt="" class="item-icon">
         <a href="./folder-tool/">フォルダ自動生成ツール</a></h2>
       <p>指定ルールに従ってフォルダ構成を自動生成します。</p>
       <div class="meta">更新日：2026-01-14</div>
