--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
        抽出条件:仮注文書発行日時(AC列)から３週間(21日)経過しているかつ、注文書発行日時(AB列)が空</p>
       <div class="meta">更新日：2026-01-14</div>
     </div>
+    
+    <div class="item">
+        <h2 class="item-title">
+        <img src="./assets/icons/haniwa.png" alt="" class="item-icon">
+        <a href="./folder-tool/">品目マスターCSV処理ツール</a></h2>
+      <p>処理内容:指定した品目コードで始まる行のみ抽出<br>
+        必要な列（品目、品名、仕様、メーカー名、手配先名、在庫評価単価、単位、保管場所）を取得<br>
+        データを3等分してCSV出力</p>
+      <div class="meta">更新日：2026-01-14</div>
+    </div>
 
     <div class="item">
       <h2 class="item-title">
