--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     
     <div class="item">
         <h2 class="item-title">
-        <img src="./assets/icons/haniwa.png" alt="" class="item-icon">
-        <a href="./folder-tool/">品目マスターCSV処理ツール</a></h2>
+        <img src="./assets/icons/matoryoshika.png" alt="" class="item-icon">
+        <a href="./csv_processor/">品目マスターCSV処理ツール</a></h2>
       <p>処理内容:指定した品目コードで始まる行のみ抽出<br>
         必要な列（品目、品名、仕様、メーカー名、手配先名、在庫評価単価、単位、保管場所）を取得<br>
         データを3等分してCSV出力</p>
