--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="item">
         <h2 class="item-title">
         <img src="./assets/icons/haniwa.png" alt="" class="item-icon">
-        <a href="./folder-tool/">日報総まとめ</a></h2>
+        <a href="./Dailyreport/">日報総まとめ</a></h2>
       <p>Excelファイルをドラッグ&ドロップして、W/C・工番・合計を抽出</p>
       <div class="meta">更新日：2026-01-14</div>
     </div>
