--- a/csv_processor/index.html
+++ b/csv_processor/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSV処理ツール</title>
+    <link rel="icon" href="./assets/icons/matoryoshika.png" type="image/png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/encoding-japanese/2.0.0/encoding.min.js"></script>
   <script>
     // Shift-JIS変換関数
