--- a/qr-generator/index.html
+++ b/qr-generator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QRコード一括生成ツール</title>
-    <link rel="icon" href="favion.png" type="image/png">
+    <link rel="icon" href="dogu.png" type="image/png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.js"></script>
     <style>
