--- a/folder-tool/index.html
+++ b/folder-tool/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>フォルダ自動生成ツール</title>
+  <link rel="icon" href="./assets/icons/moai.png" type="image/png">
   <style>
     * {
       margin: 0;
