--- a/Oder_CSV_Filter/index.html
+++ b/Oder_CSV_Filter/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>発注一覧CSVフィルター</title>
-    <img src="./assets/icons/akabeko.png" alt="" class="item-icon">
+    <link rel="icon" href="./assets/icons/akabeko.png" type="image/png">
 
     <style>
         body {
