--- a/Dailyreport/index.html
+++ b/Dailyreport/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>日報データ抽出ツール</title>
-  <link rel="icon" href="./assets/icons/haniwa.png" type="image/png">
+  <link rel="icon" href="../assets/icons/haniwa.png" type="image/png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <style>
     * {
@@ -407,4 +407,5 @@
   </script>
 </body>
 </html>
+
 
