--- a/Temporary_CSV_Filter/index.html
+++ b/Temporary_CSV_Filter/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>仮入庫データ抽出システム</title>
+  <link rel="icon" href="../assets/icons/daruma.png" type="image/png">
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
