--- a/index.html
+++ b/index.html
@@ -89,9 +89,17 @@
      <div class="item">
       <h2 class="item-title">
         <img src="./assets/icons/akabeko.png" alt="" class="item-icon">
-        <a href="./Oder_CSV_Filter/">発注一覧csvフィルターK</a></h2>
+        <a href="./Oder_CSV_Filter/">発注一覧csvフィルター</a></h2>
       <p>(ファイルを開いてCSV UTF-8(コンマ区切り)にしてから存して読み込んでください)<br>
        抽出条件:仮注文書発行日時(AC列)から３週間(21日)経過しているかつ、注文書発行日時(AB列)が空</p>
+      <div class="meta">更新日：2026-01-14</div>
+    </div>
+
+    <div class="item">
+      <h2 class="item-title">
+        <img src="./assets/icons/daruma.png" alt="" class="item-icon">
+        <a href="./Temporary_CSV_Filter/">仮入庫データ抽出フィルター</a></h2>
+      <p>CSV → 条件抽出初めからK(大物)のデータは省く</p>
       <div class="meta">更新日：2026-01-14</div>
     </div>
     
