--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
       <h2 class="item-title">
         <img src="./assets/icons/daruma.png" alt="" class="item-icon">
         <a href="./Temporary_CSV_Filter/">仮入庫データ抽出フィルター</a></h2>
-      <p>CSV → 条件抽出初めからK(大物)のデータは省く</p>
+      <p>PAS3.11「仮入庫入力」→「未入庫に✓」→「検索」→CSV出力→データを「CSV UTF-8」に変更して保存<br>
+        抽出条件:<br>
+        ・工番: 先頭2文字に「K」を含まないもの<br>
+        ・期間: 指定した開始日〜終了日の範囲内（納期または回答納期）</p>
       <div class="meta">更新日：2026-01-14</div>
     </div>
     
