--- a/index.html
+++ b/index.html
@@ -90,19 +90,15 @@
       <h2 class="item-title">
         <img src="./assets/icons/akabeko.png" alt="" class="item-icon">
         <a href="./Oder_CSV_Filter/">発注一覧csvフィルター</a></h2>
-      <p>(ファイルを開いてCSV UTF-8(コンマ区切り)にしてから存して読み込んでください)<br>
-       抽出条件:仮注文書発行日時(AC列)から３週間(21日)経過しているかつ、注文書発行日時(AB列)が空</p>
-      <div class="meta">更新日：2026-01-14</div>
+      <p>発注一覧_XXX.csv(ファイルを開いてCSV UTF-8(コンマ区切り)にして保存)</p>
+      <div class="meta">更新日：2026-01-14</div>してから
     </div>
 
     <div class="item">
       <h2 class="item-title">
         <img src="./assets/icons/daruma.png" alt="" class="item-icon">
         <a href="./Temporary_CSV_Filter/">仮入庫データ抽出フィルター</a></h2>
-      <p>PAS3.11「仮入庫入力」→「未入庫に✓」→「検索」→CSV出力→データを「CSV UTF-8」に変更して保存<br>
-        抽出条件:<br>
-        ・工番: 先頭2文字に「K」を含まないもの<br>
-        ・期間: 指定した開始日〜終了日の範囲内（納期または回答納期）</p>
+      <p>仮入庫一覧_XXXX.csv(PAS3.11「仮入庫入力」→「未入庫に✓」→「検索」→CSV出力→データを「CSV UTF-8」に変更して保存)/p>
       <div class="meta">更新日：2026-01-14</div>
     </div>
     
