--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <h2 class="item-title">
         <img src="./assets/icons/daruma.png" alt="" class="item-icon">
         <a href="./Temporary_CSV_Filter/">仮入庫データ抽出フィルター</a></h2>
-      <p>仮入庫一覧_XXXX.csv(PAS3.11「仮入庫入力」→「未入庫に✓」→「検索」→CSV出力→データを「CSV UTF-8」に変更して保存)/p>
+      <p>仮入庫一覧_XXXX.csv(PAS3.11「仮入庫入力」→「未入庫に✓」)「CSV UTF-8」に変更して保存)</p>
       <div class="meta">更新日：2026-01-14</div>
     </div>
     
