--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <img src="./assets/icons/akabeko.png" alt="" class="item-icon">
         <a href="./Oder_CSV_Filter/">発注一覧csvフィルター</a></h2>
       <p>発注一覧_XXX.csv(ファイルを開いてCSV UTF-8(コンマ区切り)にして保存)</p>
-      <div class="meta">更新日：2026-01-14</div>してから
+      <div class="meta">更新日：2026-01-14</div>
     </div>
 
     <div class="item">
