--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <h2 class="item-title">
         <img src="./assets/icons/dogu.png" alt="" class="item-icon">
         <a href="./qr-generator/">QRコード作成ツール</a></h2>
-      <p>URLや文字列からQRコードを生成します。</p>
+      <p>文字列からQRコードを生成します。品番、品名、仕様</p>
       <div class="meta">更新日：2026-01-14</div>
     </div>
 
