--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
       <div class="meta">更新日：2026-01-14</div>
     </div>
 
+        <div class="item">
+        <h2 class="item-title">
+        <img src="./assets/icons/sarubobo.png" alt="" class="item-icon">
+        <a href="./Dailyreport/">注文状況</a></h2>
+      <p>Excelファイルをドラッグ&ドロップ(UTF-8変換して保存)ピッキング状況一覧、工番一覧、発注一覧、仮入庫一覧</p>
+      <div class="meta">更新日：2026-01-27</div>
+    </div>
+
   </div>
 </body>
 </html>
