--- a/Oder_status/index.html
+++ b/Oder_status/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ピッキング状況データ統合ツール</title>
+    <link rel="icon" href="../assets/icons/sarubobo.png" type="image/png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
         * {
